caproto/v0.8.1/_sources/generated/caproto.server.records.AsubFields.rst.txt
caproto.server.records.AsubFields
=================================


.. currentmodule:: caproto.server.records

.. inheritance-diagram:: AsubFields

.. autoclass:: AsubFields

    .. if not using autodoc, add this here: automethod:: __init__

    

    
    
        .. note:: To use this, specify
                  ``record="aSub"`` in a
                  :class:`pvproperty`.
    
    

    
    
    .. list-table:: AsubFields pvproperties
        :header-rows: 1
        :widths: auto

        *  - Attribute
           - Suffix
           - Docs
           - Type
           - Notes
           - Alarm Group
    
        *  - access_security_group
           - ``ASG``
           - Access Security Group
           - CHAR 
           - 
                 Length(29)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_acknowledge_severity
           - ``ACKS``
           - Alarm Ack Severity
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_acknowledge_transient
           - ``ACKT``
           - Alarm Ack Transient
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_status
           - ``STAT``
           - Alarm Status
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - bad_return_severity
           - ``BRSV``
           - Bad Return Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - current_alarm_severity
           - ``SEVR``
           - Alarm Severity
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - dbputfield_process
           - ``PUTF``
           - dbPutField process
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - description
           - ``DESC``
           - Descriptor
           - CHAR 
           - 
                 Length(41)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - device_type
           - ``DTYP``
           - Device Type
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable
           - ``DISA``
           - Disable
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_alarm_severity
           - ``DISS``
           - Disable Alarm Sevrty
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_putfield
           - ``DISP``
           - Disable putField
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_value
           - ``DISV``
           - Disable Value
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - display_precision
           - ``PREC``
           - Display Precision
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
                 **Get**
                 **Put**
           - 
    
        *  - event_name
           - ``EVNT``
           - Event Name
           - CHAR 
           - 
                 Length(40)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - forward_link
           - ``FLNK``
           - Forward Process Link
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - initialize_subr_name
           - ``INAM``
           - Initialize Subr. Name
           - CHAR 
           - 
                 **Read-only**
                 Length(41)
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - input_link_a
           - ``INPA``
           - Input Link A
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - input_link_b
           - ``INPB``
           - Input Link B
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - input_link_c
           - ``INPC``
           - Input Link C
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - input_link_d
           - ``INPD``
           - Input Link D
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - input_link_e
           - ``INPE``
           - Input Link E
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - input_link_f
           - ``INPF``
           - Input Link F
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - input_link_g
           - ``INPG``
           - Input Link G
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - input_link_h
           - ``INPH``
           - Input Link H
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - input_link_i
           - ``INPI``
           - Input Link I
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - input_link_j
           - ``INPJ``
           - Input Link J
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - input_link_k
           - ``INPK``
           - Input Link K
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - input_link_l
           - ``INPL``
           - Input Link L
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - input_link_m
           - ``INPM``
           - Input Link M
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - input_link_n
           - ``INPN``
           - Input Link N
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - input_link_o
           - ``INPO``
           - Input Link O
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - input_link_p
           - ``INPP``
           - Input Link P
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - input_link_q
           - ``INPQ``
           - Input Link Q
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - input_link_r
           - ``INPR``
           - Input Link R
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - input_link_s
           - ``INPS``
           - Input Link S
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - input_link_t
           - ``INPT``
           - Input Link T
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - input_link_u
           - ``INPU``
           - Input Link U
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - lock_count
           - ``LCNT``
           - Lock Count
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - max_elements_in_a
           - ``NOA``
           - Max. elements in A
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_b
           - ``NOB``
           - Max. elements in B
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_c
           - ``NOC``
           - Max. elements in C
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_d
           - ``NOD``
           - Max. elements in D
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_e
           - ``NOE``
           - Max. elements in E
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_f
           - ``NOF``
           - Max. elements in F
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_g
           - ``NOG``
           - Max. elements in G
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_h
           - ``NOH``
           - Max. elements in H
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_i
           - ``NOI``
           - Max. elements in I
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_j
           - ``NOJ``
           - Max. elements in J
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_k
           - ``NOK``
           - Max. elements in K
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_l
           - ``NOL``
           - Max. elements in L
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_m
           - ``NOM``
           - Max. elements in M
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_n
           - ``NON``
           - Max. elements in N
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_o
           - ``NOO``
           - Max. elements in O
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_p
           - ``NOP``
           - Max. elements in P
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_q
           - ``NOQ``
           - Max. elements in Q
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_r
           - ``NOR``
           - Max. elements in R
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_s
           - ``NOS``
           - Max. elements in S
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_t
           - ``NOT``
           - Max. elements in T
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_u
           - ``NOU``
           - Max. elements in U
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_vala
           - ``NOVA``
           - Max. elements in VALA
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_valb
           - ``NOVB``
           - Max. elements in VALB
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_valc
           - ``NOVC``
           - Max. elements in VALC
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_vald
           - ``NOVD``
           - Max. elements in VALD
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_vale
           - ``NOVE``
           - Max. elements in VALE
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_valf
           - ``NOVF``
           - Max. elements in VALF
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_valg
           - ``NOVG``
           - Max. elements in VALG
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_valh
           - ``NOVH``
           - Max. elements in VAlH
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_vali
           - ``NOVI``
           - Max. elements in VALI
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_valj
           - ``NOVJ``
           - Max. elements in VALJ
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_valk
           - ``NOVK``
           - Max. elements in VALK
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_vall
           - ``NOVL``
           - Max. elements in VALL
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_valm
           - ``NOVM``
           - Max. elements in VALM
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_valn
           - ``NOVN``
           - Max. elements in VALN
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_valo
           - ``NOVO``
           - Max. elements in VALO
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_valp
           - ``NOVP``
           - Max. elements in VALP
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_valq
           - ``NOVQ``
           - Max. elements in VALQ
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_valr
           - ``NOVR``
           - Max. elements in VALR
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_vals
           - ``NOVS``
           - Max. elements in VALS
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_valt
           - ``NOVT``
           - Max. elements in VALT
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - max_elements_in_valu
           - ``NOVU``
           - Max. elements in VALU
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - new_alarm_severity
           - ``NSEV``
           - New Alarm Severity
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - new_alarm_status
           - ``NSTA``
           - New Alarm Status
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - num_elements_in_a
           - ``NEA``
           - Num. elements in A
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_b
           - ``NEB``
           - Num. elements in B
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_c
           - ``NEC``
           - Num. elements in C
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_d
           - ``NED``
           - Num. elements in D
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_e
           - ``NEE``
           - Num. elements in E
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_f
           - ``NEF``
           - Num. elements in F
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_g
           - ``NEG``
           - Num. elements in G
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_h
           - ``NEH``
           - Num. elements in H
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_i
           - ``NEI``
           - Num. elements in I
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_j
           - ``NEJ``
           - Num. elements in J
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_k
           - ``NEK``
           - Num. elements in K
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_l
           - ``NEL``
           - Num. elements in L
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_m
           - ``NEM``
           - Num. elements in M
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_n
           - ``NEN``
           - Num. elements in N
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_o
           - ``NEO``
           - Num. elements in O
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_ovla
           - ``ONVA``
           - Num. elements in OVLA
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_ovlb
           - ``ONVB``
           - Num. elements in OVLB
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_ovlc
           - ``ONVC``
           - Num. elements in OVLC
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_ovld
           - ``ONVD``
           - Num. elements in OVLD
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_ovle
           - ``ONVE``
           - Num. elements in OVLE
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_ovlf
           - ``ONVF``
           - Num. elements in OVLF
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_ovlg
           - ``ONVG``
           - Num. elements in OVLG
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_ovlh
           - ``ONVH``
           - Num. elements in VAlH
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_ovli
           - ``ONVI``
           - Num. elements in OVLI
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_ovlj
           - ``ONVJ``
           - Num. elements in OVLJ
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_ovlk
           - ``ONVK``
           - Num. elements in OVLK
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_ovll
           - ``ONVL``
           - Num. elements in OVLL
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_ovlm
           - ``ONVM``
           - Num. elements in OVLM
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_ovln
           - ``ONVN``
           - Num. elements in OVLN
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_ovlo
           - ``ONVO``
           - Num. elements in OVLO
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_ovlp
           - ``ONVP``
           - Num. elements in OVLP
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_ovlq
           - ``ONVQ``
           - Num. elements in OVLQ
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_ovlr
           - ``ONVR``
           - Num. elements in OVLR
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_ovls
           - ``ONVS``
           - Num. elements in OVLS
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_ovlt
           - ``ONVT``
           - Num. elements in OVLT
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_ovlu
           - ``ONVU``
           - Num. elements in OVLU
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_p
           - ``NEP``
           - Num. elements in P
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_q
           - ``NEQ``
           - Num. elements in Q
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_r
           - ``NER``
           - Num. elements in R
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_s
           - ``NES``
           - Num. elements in S
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_t
           - ``NET``
           - Num. elements in T
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_u
           - ``NEU``
           - Num. elements in U
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_vala
           - ``NEVA``
           - Num. elements in VALA
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_valb
           - ``NEVB``
           - Num. elements in VALB
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_valc
           - ``NEVC``
           - Num. elements in VALC
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_vald
           - ``NEVD``
           - Num. elements in VALD
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_vale
           - ``NEVE``
           - Num. elements in VALE
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_valf
           - ``NEVF``
           - Num. elements in VALF
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_valg
           - ``NEVG``
           - Num. elements in VALG
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_valh
           - ``NEVH``
           - Num. elements in VAlH
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_vali
           - ``NEVI``
           - Num. elements in VALI
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_valj
           - ``NEVJ``
           - Num. elements in VALJ
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_valk
           - ``NEVK``
           - Num. elements in VALK
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_vall
           - ``NEVL``
           - Num. elements in VALL
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_valm
           - ``NEVM``
           - Num. elements in VALM
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_valn
           - ``NEVN``
           - Num. elements in VALN
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_valo
           - ``NEVO``
           - Num. elements in VALO
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_valp
           - ``NEVP``
           - Num. elements in VALP
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_valq
           - ``NEVQ``
           - Num. elements in VALQ
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_valr
           - ``NEVR``
           - Num. elements in VALR
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_vals
           - ``NEVS``
           - Num. elements in VALS
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_valt
           - ``NEVT``
           - Num. elements in VALT
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - num_elements_in_valu
           - ``NEVU``
           - Num. elements in VALU
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - old_return_value
           - ``OVAL``
           - Old return value
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - old_subr_name
           - ``ONAM``
           - Old Subr. Name
           - CHAR 
           - 
                 **Read-only**
                 Length(41)
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - output_event_flag
           - ``EFLG``
           - Output Event Flag
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - output_link_a
           - ``OUTA``
           - Output Link A
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - output_link_b
           - ``OUTB``
           - Output Link B
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - output_link_c
           - ``OUTC``
           - Output Link C
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - output_link_d
           - ``OUTD``
           - Output Link D
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - output_link_e
           - ``OUTE``
           - Output Link E
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - output_link_f
           - ``OUTF``
           - Output Link F
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - output_link_g
           - ``OUTG``
           - Output Link G
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - output_link_h
           - ``OUTH``
           - Output Link H
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - output_link_i
           - ``OUTI``
           - Output Link I
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - output_link_j
           - ``OUTJ``
           - Output Link J
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - output_link_k
           - ``OUTK``
           - Output Link K
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - output_link_l
           - ``OUTL``
           - Output Link L
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - output_link_m
           - ``OUTM``
           - Output Link M
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - output_link_n
           - ``OUTN``
           - Output Link N
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - output_link_o
           - ``OUTO``
           - Output Link O
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - output_link_p
           - ``OUTP``
           - Output Link P
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - output_link_q
           - ``OUTQ``
           - Output Link Q
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - output_link_r
           - ``OUTR``
           - Output Link R
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - output_link_s
           - ``OUTS``
           - Output Link S
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - output_link_t
           - ``OUTT``
           - Output Link T
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - output_link_u
           - ``OUTU``
           - Output Link U
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - process_at_iocinit
           - ``PINI``
           - Process at iocInit
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - process_record
           - ``PROC``
           - Force Processing
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - process_subr_name
           - ``SNAM``
           - Process Subr. Name
           - CHAR 
           - 
                 Length(41)
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - record_active
           - ``PACT``
           - Record active
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - record_name
           - ``NAME``
           - Record Name
           - CHAR 
           - 
                 **Read-only**
                 Length(61)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - record_type
           - ``RTYP``
           - Record type
           - STRING 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.records.RecordFieldGroup`
           - 
    
        *  - reprocess
           - ``RPRO``
           - Reprocess 
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scan_phase
           - ``PHAS``
           - Scan Phase
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scan_rate
           - ``SCAN``
           - Scan Mechanism
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scanning_disable
           - ``SDIS``
           - Scanning Disable
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scheduling_priority
           - ``PRIO``
           - Scheduling Priority
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - subr_input_enable
           - ``LFLG``
           - Subr. Input Enable
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - subroutine_name_link
           - ``SUBL``
           - Subroutine Name Link
           - STRING 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - time_stamp_event
           - ``TSE``
           - Time Stamp Event
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - time_stamp_link
           - ``TSEL``
           - Time Stamp Link
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - trace_processing
           - ``TPRO``
           - Trace Processing
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - type_of_a
           - ``FTA``
           - Type of A
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_b
           - ``FTB``
           - Type of B
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_c
           - ``FTC``
           - Type of C
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_d
           - ``FTD``
           - Type of D
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_e
           - ``FTE``
           - Type of E
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_f
           - ``FTF``
           - Type of F
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_g
           - ``FTG``
           - Type of G
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_h
           - ``FTH``
           - Type of H
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_i
           - ``FTI``
           - Type of I
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_j
           - ``FTJ``
           - Type of J
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_k
           - ``FTK``
           - Type of K
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_l
           - ``FTL``
           - Type of L
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_m
           - ``FTM``
           - Type of M
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_n
           - ``FTN``
           - Type of N
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_o
           - ``FTO``
           - Type of O
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_p
           - ``FTP``
           - Type of P
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_q
           - ``FTQ``
           - Type of Q
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_r
           - ``FTR``
           - Type of R
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_s
           - ``FTS``
           - Type of S
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_t
           - ``FTT``
           - Type of T
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_u
           - ``FTU``
           - Type of U
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_vala
           - ``FTVA``
           - Type of VALA
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_valb
           - ``FTVB``
           - Type of VALB
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_valc
           - ``FTVC``
           - Type of VALC
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_vald
           - ``FTVD``
           - Type of VALD
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_vale
           - ``FTVE``
           - Type of VALE
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_valf
           - ``FTVF``
           - Type of VALF
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_valg
           - ``FTVG``
           - Type of VALG
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_valh
           - ``FTVH``
           - Type of VALH
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_vali
           - ``FTVI``
           - Type of VALI
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_valj
           - ``FTVJ``
           - Type of VALJ
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_valk
           - ``FTVK``
           - Type of VALK
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_vall
           - ``FTVL``
           - Type of VALL
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_valm
           - ``FTVM``
           - Type of VALM
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_valn
           - ``FTVN``
           - Type of VALN
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_valo
           - ``FTVO``
           - Type of VALO
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_valp
           - ``FTVP``
           - Type of VALP
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_valq
           - ``FTVQ``
           - Type of VALQ
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_valr
           - ``FTVR``
           - Type of VALR
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_vals
           - ``FTVS``
           - Type of VALS
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_valt
           - ``FTVT``
           - Type of VALT
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - type_of_valu
           - ``FTVU``
           - Type of VALU
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AsubFields`
           - 
    
        *  - undefined
           - ``UDF``
           - Undefined
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - undefined_alarm_severity
           - ``UDFS``
           - Undefined Alarm Sevrty
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
    

    
    

    
    
    .. rubric:: Methods

    .. autosummary::
    
       ~AsubFields.group_read
       ~AsubFields.group_write
       ~AsubFields.publish
       ~AsubFields.value_write_hook
    
    

    
    
    .. rubric:: Attributes

    .. autosummary::

    
       ~AsubFields.default_values
       ~AsubFields.has_val_field
       ~AsubFields.scan_rate_sec
       ~AsubFields.type_map
       ~AsubFields.type_map_read_only
    

    
    .. rubric:: pvproperty methods
    .. method:: display_precision.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.10/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 38
        :lines: 38-40